--- a/src/components/styles/XtxSwiper.scss
+++ b/src/components/styles/XtxSwiper.scss
@@ -1,26 +1,26 @@
 /* 轮播图 */
 .carousel {
-  height: 280rpx;
   position: relative;
+  height: 280rpx;
   overflow: hidden;
-  transform: translateY(0);
   background-color: #efefef;
+  transform: translateY(0);
   .indicator {
     position: absolute;
-    left: 0;
     right: 0;
     bottom: 16rpx;
+    left: 0;
     display: flex;
     justify-content: center;
     .dot {
       width: 30rpx;
       height: 6rpx;
       margin: 0 8rpx;
+      background-color: rgb(255 255 255 / 40%);
       border-radius: 6rpx;
-      background-color: rgba(255, 255, 255, 0.4);
     }
     .active {
-      background-color: #fff;
+      background-color: #ffffff;
     }
   }
   .navigator,
