--- a/src/pages/category/styles/category.scss
+++ b/src/pages/category/styles/category.scss
@@ -3,23 +3,23 @@ page {
   overflow: hidden;
 }
 .viewport {
-  height: 100%;
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 .search {
   padding: 20rpx 30rpx;
-  background-color: #fff;
+  background-color: #ffffff;
   .input {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 64rpx;
     padding-left: 26rpx;
-    color: #8b8b8b;
     font-size: 28rpx;
-    border-radius: 32rpx;
+    color: #8b8b8b;
     background-color: #f3f4f4;
+    border-radius: 32rpx;
   }
 }
 .icon-search {
@@ -27,44 +27,46 @@ page {
     margin-right: 10rpx;
   }
 }
+
 /* 分类 */
 .categories {
+  display: flex;
   flex: 1;
   min-height: 400rpx;
-  display: flex;
 }
+
 /* 一级分类 */
 .primary {
-  overflow: hidden;
-  width: 180rpx;
   flex: none;
+  width: 180rpx;
+  overflow: hidden;
   background-color: #f6f6f6;
   .item {
+    position: relative;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     height: 96rpx;
     font-size: 26rpx;
     color: #595c63;
-    position: relative;
     &::after {
-      content: '';
       position: absolute;
-      left: 42rpx;
       bottom: 0;
+      left: 42rpx;
       width: 96rpx;
+      content: "";
       border-top: 1rpx solid #e3e4e7;
     }
   }
   .active {
-    background-color: #fff;
+    background-color: #ffffff;
     &::before {
-      content: '';
       position: absolute;
-      left: 0;
       top: 0;
+      left: 0;
       width: 8rpx;
       height: 100%;
+      content: "";
       background-color: #27ba9b;
     }
   }
@@ -73,41 +75,42 @@ page {
 .primary .active::after {
   display: none;
 }
+
 /* 二级分类 */
 .secondary {
-  background-color: #fff;
+  background-color: #ffffff;
   .carousel {
     height: 200rpx;
     margin: 0 30rpx 20rpx;
-    border-radius: 4rpx;
     overflow: hidden;
+    border-radius: 4rpx;
   }
   .panel {
     margin: 0 30rpx 0rpx;
   }
   .title {
     height: 60rpx;
-    line-height: 60rpx;
-    color: #333;
     font-size: 28rpx;
+    line-height: 60rpx;
+    color: #333333;
     border-bottom: 1rpx solid #f7f7f8;
     .more {
       float: right;
       padding-left: 20rpx;
       font-size: 24rpx;
-      color: #999;
+      color: #999999;
     }
   }
   .more {
     &::after {
-      font-family: 'erabbit' !important;
-      content: '\e6c2';
+      font-family: erabbit !important;
+      content: "\e6c2";
     }
   }
   .section {
-    width: 100%;
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
     padding: 20rpx 0;
     .goods {
       width: 150rpx;
@@ -122,7 +125,7 @@ page {
       .name {
         padding: 5rpx;
         font-size: 22rpx;
-        color: #333;
+        color: #333333;
       }
       .price {
         padding: 5rpx;
@@ -130,8 +133,8 @@ page {
         color: #cf4444;
       }
       .number {
-        font-size: 24rpx;
         margin-left: 2rpx;
+        font-size: 24rpx;
       }
     }
   }
