--- a/src/pages/index/styles/hot.scss
+++ b/src/pages/index/styles/hot.scss
@@ -4,30 +4,28 @@
   flex-wrap: wrap;
   min-height: 508rpx;
   margin: 20rpx 20rpx 0;
+  background-color: #ffffff;
   border-radius: 10rpx;
-  background-color: #fff;
-
   .title {
+    position: relative;
     display: flex;
     align-items: center;
     padding: 24rpx 24rpx 0;
     font-size: 32rpx;
     color: #262626;
-    position: relative;
     .title-desc {
+      margin-left: 18rpx;
       font-size: 24rpx;
       color: #7f7f7f;
-      margin-left: 18rpx;
     }
   }
-
   .item {
     display: flex;
     flex-direction: column;
     width: 50%;
     height: 254rpx;
-    border-right: 1rpx solid #eee;
-    border-top: 1rpx solid #eee;
+    border-top: 1rpx solid #eeeeee;
+    border-right: 1rpx solid #eeeeee;
     .title {
       justify-content: start;
     }
@@ -43,10 +41,10 @@
     }
   }
   .cards {
-    flex: 1;
-    padding: 15rpx 20rpx;
     display: flex;
-    justify-content: space-between;
+    flex: 1;
     align-items: center;
+    justify-content: space-between;
+    padding: 15rpx 20rpx;
   }
 }
