--- a/src/pages/index/styles/category.scss
+++ b/src/pages/index/styles/category.scss
@@ -2,7 +2,7 @@
 .category {
   display: flex;
   flex-wrap: wrap;
-  min-height: 328rpx;
+  //min-height: 328rpx;
   padding: 10rpx 0;
   margin: 20rpx 0 0;
   .category-item {
